# themed-print

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/themed_print/: __init__.py  main.py
src/themed_print.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
